# Rust_WebSocket_RelayServer-EC2-V2-Windows_ReFactor

./: .env.example  .gitignore  Cargo.toml  Obfus Method.txt  PROJECT_CONTEXT.md  PlanStep3.md  README.MD  REQUIREMENT_PLAN_MULTI_CLIENT_SYNC.md  TODO_MULTI_ASSET_TRADE.md  config.toml  decode_names.js  decode_names.ps1  decode_test.py  fix_names.js  how_to_install.md  planAddSocket.md  refactorPlan.md  strategy_plan_1.md  strategy_plan_2.md  strategy_plan_3.md  strategy_plan_4.md  strategy_plan_master.md  trade_dashboard.html  wasm_architecture_summary.md  การBuildบน ec2.txt
.agent/workflows/: project-context.md
RustLib/indicator_math/: Cargo.toml  README.md  howtouse_cpu.md  howtouse_gpu.md  indicatormath_tick.md  wasm_example.html  wasm_gpu_example.html
RustLib/indicator_math/docs/: how_to_use.md  plan_wasm_cpu.md  plan_wasm_gpu.md
RustLib/indicator_math/src/: CodeCandleMaster.json  deriv_api.rs  generator.rs  lib.rs  manager.rs  smc.rs  structs.rs
RustLib/indicator_math/src/batch_math/: analysis_generator.rs  indicators.rs  mod.rs
RustLib/indicator_math/src/wasm/: cpu.rs  gpu.rs  sma_shader.wgsl
dashboard2/: index  index.html
dashboard2/css/: styles.css
dashboard2/js/: app.js
gpu2/: .gitignore  CHANGELOG_OHLC_UPDATE.md  MACD_INTEGRATION_STATUS.md  MultiAssetBundle.js  OHLC_QUICK_GUIDE.md  PKIndicator_Reference.md  README.md  README_SAFETY_TH.md  RUST_PORT_PLAN.md  SAFETY_ANALYSIS.md  SAFE_CONFIGS.json  SMC_Integration_Guide.md  Untitled1.txt  chart-manager.js  deriv.md  guageAmChart.html  index.html  listAllTrade.php  milemeter1.html  milemeter2.html  multiAsset.html  plan_advanced_accumulator_strategy.md  project_context.md  smc_macd_demo.html  testDerivAccumulator.html  testDerivBot.html  testDerivBotTrade.html  testDerivBotTradeV1.html  testDerivBotTradeV2.html  testDerivTablerBot.html  testMultiAssetBundle.html  testMultiAssetBundleV2.html  testTickAnalysis.html  testTickAnalysisMulti.html  test_multi_asset_bundle.html  wgpl.html
gpu2/RustLib/indicator_math/: Cargo.toml  README.md
gpu2/RustLib/indicator_math/src/: generator.rs  lib.rs  structs.rs
gpu2/js/: CodeColorMaster.js  SMCChartRenderer.js  accuAnalysis.js  backgroundColorZonesPlugin.js  choppiness-indexV3.js  clsAnalysisGenerator.js  clsAnalysisGeneratorTick.js  jsB.js  main.js  mainV2.js  mainV3.js  mainV4.js  temp_mainV4_part2.js  trade.js  trader.js
gpu2/loadpara/: multiAsset.html
gpu2/my-trading-lib/: CodeColorMaster.js  README.md  SMCIndicator.js  SMCIndicator.standalone.js  app.js  chart-manager.js  clsAnalysisGenerator.js  clsAnalysisGeneratorV2.js  clsWGSLCompute.js  deriv-api.js  deriv.js  details.js  indicator.js  indicatorJS_Ver2.js  indicators.js  meter.js  multi-asset-loader.js  temp_mainV4_part1.js  trader.js  webgpu-indicators.js
gpu2/trading-sdk/: README.md  package.json  rollup.config.mjs
public/: config.js  config.json  index.html  index_backup.html  login.html  setup.html  tick_history.html  tutor.html
smc/: DerivSMC.js  MovingAverages.js  SMCChartRenderer.js  SMCIndicator.js  index.js
src/: architecture.drawio  auto_trade.rs  config.rs  deriv_common.rs  deriv_single.rs  firestore_manager.rs  main.rs  market_scanner.rs  models.rs
(+21 files in other folders)
