[package]
name = "indicatorMath_ULTRA_Rust"
version = "1.4.0"
edition = "2021"
description = "High-performance technical analysis library for financial data, replicating clsAnalysisGenerator.js logic."
license = "MIT"
repository = "https://github.com/Pick999999/indicator_math_ultra_rust"
keywords = ["finance", "analysis", "technical-analysis", "trading", "indicators"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
futures-util = "0.3"
url = "2.4"
dashmap = "6.1.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
wgpu = "0.20"
bytemuck = { version = "1.16", features = ["derive", "min_const_generics"] }
pollster = "0.3"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
futures-channel = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"
env_logger = "0.10"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Document"] }
