[package]
name = "indicator_math"
version = "0.1.0"
edition = "2021"
description = "High-performance technical analysis library for financial data, replicating clsAnalysisGenerator.js logic."
license = "MIT"
repository = "https://github.com/yourusername/indicator_math"
keywords = ["finance", "analysis", "technical-analysis", "trading", "indicators"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
url = "2.4"
reqwest = { version = "0.11", features = ["json", "blocking"] } 
dashmap = "6.1.0"
